# StairLightController

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  clean_project.sh
include/: bsp_io_bin.h  bsp_io_bout.h  button.h  config.h  data_types.h  debounce.h  led.h  main.h
src/: bsp_io_bin.c  bsp_io_bout.c  button.c  debounce.c  led.c  main.c
